dfir_rs/tests/compile-fail-stable/surface_demuxenum_wrongfields_2.stderr
error[E0631]: type mismatch in closure arguments
  --> tests/compile-fail-stable/surface_demuxenum_wrongfields_2.rs:17:28
   |
17 |         ]) -> demux_enum::<Shape>();
   |                            ^^^^^ expected due to this
...
20 |         my_demux[Square] -> for_each(|side: (u32,)| ());
   |                                      -------------- found signature defined here
   |
   = note: expected closure signature `fn((f64,)) -> _`
              found closure signature `fn((u32,)) -> _`
   = note: required for `dfir_rs::sinktools::for_each::ForEach<{closure@$DIR/tests/compile-fail-stable/surface_demuxenum_wrongfields_2.rs:20:38: 20:52}>` to implement `dfir_rs::futures::Sink<(f64,)>`
note: required for `Shape` to implement `DemuxEnumSink<(Pin<&mut dfir_rs::sinktools::for_each::ForEach<fn((f64,)) {std::mem::drop::<(f64,)>}>>, Pin<&mut dfir_rs::sinktools::for_each::ForEach<fn((f64, f64)) {std::mem::drop::<(f64, f64)>}>>, Pin<&mut dfir_rs::sinktools::for_each::ForEach<{closure@$DIR/tests/compile-fail-stable/surface_demuxenum_wrongfields_2.rs:20:38: 20:52}>>)>`
  --> tests/compile-fail-stable/surface_demuxenum_wrongfields_2.rs:5:14
   |
 5 |     #[derive(DemuxEnum)]
   |              ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
 6 |     enum Shape {
   |          ^^^^^
note: required by a bound in `demux_enum_guard`
  --> tests/compile-fail-stable/surface_demuxenum_wrongfields_2.rs:17:15
   |
17 |         ]) -> demux_enum::<Shape>();
   |               ^^^^^^^^^^ required by this bound in `demux_enum_guard`
   = note: this error originates in the derive macro `DemuxEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
